[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/pause_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://img/Gerald's Keys (1)/Keys/E-Key.png" type="Texture" id=3]
[ext_resource path="res://scenes/pantalla_de_muerte.tscn" type="PackedScene" id=4]
[ext_resource path="res://img/Player/Prota_IDLE (1).png" type="Texture" id=10]

[sub_resource type="Animation" id=8]
resource_name = "IDLE"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IDLE"

[sub_resource type="AnimationNodeStateMachine" id=10]
states/IDLE/node = SubResource( 12 )
states/IDLE/position = Vector2( 210, 60 )
start_node = "IDLE"

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="CapsuleShape2D" id=4]
radius = 38.0
height = 8.0

[sub_resource type="CircleShape2D" id=7]
radius = 37.5899

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Pivot" type="Node2D" parent="."]
show_behind_parent = true

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( 0, -4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
hframes = 8

[node name="ScareSpawn" type="Position2D" parent="Pivot"]
position = Vector2( 59, -4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IDLE = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = -1.58723
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 16

[node name="Interaccion" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, -65 )
hframes = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Pantalla de muerte" parent="CanvasLayer" instance=ExtResource( 4 )]
player_node = NodePath("../..")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
